first draft of saving settings in the plugin

--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -1,4 +1,8 @@
 [COMMON]
+SAVE_BTN="SAVE"
+HINT_SAVE_SAVING="Saving data ..."
+HINT_SAVE_ERROR="Error While saving, please check your credentials"
+HINT_SAVE_OK="Sucessfully saved"
 
 [UNIFI]
 CONTROLLER="UniFi Controller Settings"
@@ -7,3 +11,4 @@ IP_HINT="Please enter the local IP of your UniFi controller and ensure that Loxb
 USERNAME="Username"
 PASSWORD="Password"
 LOGIN_HINT="Please keep in mind that currently, the plugin does not support 2FA for UniFi controller."
+NEED_MQTT="To use this plugin, the MQTT Gateway plugin is required. Please install the MQTT Gateway Plugin first."
