editable configuration page

--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -12,3 +12,12 @@ USERNAME="Username"
 PASSWORD="Password"
 LOGIN_HINT="Please keep in mind that currently, the plugin does not support 2FA for UniFi controller."
 NEED_MQTT="To use this plugin, the MQTT Gateway plugin is required. Please install the MQTT Gateway Plugin first."
+CLIENTS="UniFi WiFi Clients"
+NO_CLIENTS="Clients cannot be displayed yet, please ensure a stable connection to the UniFi Controller first."
+CLIENT_SELECTION="All clients which are selected are watched and transmitted to MQTT. All other clients are ignored. To get the state of one or more elements, simply select them. The selection is saved automatically."
+NAME="Name"
+MAC="Mac Address"
+IP="IP Address"
+SSID="SSID"
+EXPERIENCE="Experience"
+TYPE="Type"
