add topic config, improve ui, add german language

--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -6,6 +6,8 @@ HINT_SAVE_OK="Sucessfully saved"
 
 [UNIFI]
 CONTROLLER="UniFi Controller Settings"
+TOPIC="MQTT Topic"
+TOPIC_HINT="Specify the topic you'd like the data to be published. eg. UniFi/clients. No slash in the beginning or the end."
 IP="IP Address"
 IP_HINT="Please enter the local IP of your UniFi controller and ensure that Loxberry has access."
 USERNAME="Username"
@@ -21,3 +23,6 @@ IP="IP Address"
 SSID="SSID"
 EXPERIENCE="Experience"
 TYPE="Type"
+
+[VALIDATION]
+TOPIC_ERROR="Please specify a topic like UniFi/clients. No spaces, no Slash in the beginning or end."
