add 2FA authentication

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -3,6 +3,7 @@ SAVE_BTN="Speichern"
 HINT_SAVE_SAVING="Speichere Daten ..."
 HINT_SAVE_ERROR="Fehler beim Speicher, Bitte überprüfe die Zugangsdaten"
 HINT_SAVE_OK="Erfolgreich gespeichert"
+HINT_SAVE_2FA="Bitte gebe dein 2 Faktor code ein um dich einzuloggen"
 
 [UNIFI]
 CONTROLLER="UniFi Controller Einstelllungen"
@@ -22,6 +23,7 @@ MAC="Mac Adresse"
 SSID="WLAN SSID"
 EXPERIENCE="Erfahrung"
 TYPE="Typ"
+2FA="Bitte gebe dein 2 Faktor Code ein."
 
 [VALIDATION]
 TOPIC_ERROR="Bitte speizifieren das topic in dem die Daten geschrieben werden sollen."
