--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -3,6 +3,7 @@ SAVE_BTN="SAVE"
 HINT_SAVE_SAVING="Saving data ..."
 HINT_SAVE_ERROR="Error While saving, please check your credentials"
 HINT_SAVE_OK="Sucessfully saved"
+HINT_SAVE_2FA="Please enter your 2FA code to login"
 
 [UNIFI]
 CONTROLLER="UniFi Controller Settings"
@@ -23,6 +24,7 @@ IP="IP Address"
 SSID="SSID"
 EXPERIENCE="Experience"
 TYPE="Type"
+2FA="Please enter your 2FA code to login"
 
 [VALIDATION]
 TOPIC_ERROR="Please specify a topic like UniFi/clients. No spaces, no Slash in the beginning or end."
