check version of UniFi controller to show error

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -4,6 +4,7 @@ HINT_SAVE_SAVING="Speichere Daten ..."
 HINT_SAVE_ERROR="Fehler beim Speicher, Bitte überprüfe die Zugangsdaten"
 HINT_SAVE_OK="Erfolgreich gespeichert"
 HINT_SAVE_2FA="Bitte gebe dein 2 Faktor code ein um dich einzuloggen"
+VERSION_ERROR="Die Version deines UniFi Controller ist kleiner als 6.4.54. Bitte aktualisiere zuerst deinen controller um das Plugin nutzen zu können. Deine aktuelle Version ist"
 
 [UNIFI]
 CONTROLLER="UniFi Controller Einstelllungen"
@@ -24,6 +25,8 @@ SSID="WLAN SSID"
 EXPERIENCE="Erfahrung"
 TYPE="Typ"
 2FA="Bitte gebe dein 2 Faktor Code ein."
+ON="An"
+OFF="Aus"
 
 [VALIDATION]
 TOPIC_ERROR="Bitte speizifieren das topic in dem die Daten geschrieben werden sollen."
