--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -4,6 +4,7 @@ HINT_SAVE_SAVING="Saving data ..."
 HINT_SAVE_ERROR="Error While saving, please check your credentials"
 HINT_SAVE_OK="Sucessfully saved"
 HINT_SAVE_2FA="Please enter your 2FA code to login"
+VERSION_ERROR="The Version of your UniFi controller is lower than 6.4.54. Please update the controller to use the plugin. Your version is"
 
 [UNIFI]
 CONTROLLER="UniFi Controller Settings"
@@ -25,6 +26,8 @@ SSID="SSID"
 EXPERIENCE="Experience"
 TYPE="Type"
 2FA="Please enter your 2FA code to login"
+ON="On"
+OFF="Off"
 
 [VALIDATION]
 TOPIC_ERROR="Please specify a topic like UniFi/clients. No spaces, no Slash in the beginning or end."
