add support for other types of controller other than dream machine

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -7,6 +7,7 @@ HINT_SAVE_2FA="Bitte gebe dein 2 Faktor code ein um dich einzuloggen"
 VERSION_ERROR="Die Version deines UniFi Controller ist kleiner als 6.4.54. Bitte aktualisiere zuerst deinen controller um das Plugin nutzen zu können. Deine aktuelle Version ist"
 
 [UNIFI]
+MQTT_SETTINGS="MQTT Einstellungen"
 CONTROLLER="UniFi Controller Einstelllungen"
 TOPIC="MQTT Topic"
 TOPIC_HINT="Das Mqtt Topic in dem die Werte geschrieben werden sollen. Z.B. UniFi/clients. Kein Slash am Anfang oder Ende und keine Leer- oder Sonderzeichen"
@@ -27,6 +28,11 @@ TYPE="Typ"
 2FA="Bitte gebe dein 2 Faktor Code ein."
 ON="An"
 OFF="Aus"
+NATIVE="Benutzt du einen nativen UniFi Controller wie die Dream Machine?"
+NATIVE_HINT="Wenn du eine UniFi Dream Machine oder die Dream Machine Pro benutzt, aktiviere bitte den Schalter. Wenn dein Controller woanders läuft, dann lasse den Schalter bitte aus."
+PORT="Der port um das Dashbaord zu öffnen - sofern benötigt."
+PORT_HINT="Wenn du einen port für den Zugriff auf den Controller im Browser brauchst, dann geben diesen bitte hier an."
+
 
 [VALIDATION]
 TOPIC_ERROR="Bitte speizifieren das topic in dem die Daten geschrieben werden sollen."
