--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -7,6 +7,7 @@ HINT_SAVE_2FA="Please enter your 2FA code to login"
 VERSION_ERROR="The Version of your UniFi controller is lower than 6.4.54. Please update the controller to use the plugin. Your version is"
 
 [UNIFI]
+MQTT_SETTINGS="MQTT Settings"
 CONTROLLER="UniFi Controller Settings"
 TOPIC="MQTT Topic"
 TOPIC_HINT="Specify the topic you'd like the data to be published. eg. UniFi/clients. No slash in the beginning or the end."
@@ -28,6 +29,10 @@ TYPE="Type"
 2FA="Please enter your 2FA code to login"
 ON="On"
 OFF="Off"
+NATIVE="Do you use a native UniFi Controller e.g. Dream Machine?"
+NATIVE_HINT="If you use a UniFi Dream Machine oder Dream MAchine Pro, please tick this with yes. If your controller runs somewhere else please leave that unchecked."
+PORT="UniFi port to acces the control panel"
+PORT_HINT="If you do need a port to access the control panel via browser, please specifiy this port here."
 
 [VALIDATION]
 TOPIC_ERROR="Please specify a topic like UniFi/clients. No spaces, no Slash in the beginning or end."
