fix typos and remove 2fa hint

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -15,9 +15,8 @@ IP="IP Adresse"
 IP_HINT="Gebe hier die IP Adresse des UniFi Controllers an. Stelle Sicher, dass Loxberry zugriff darauf hat."
 USERNAME="Benutzername"
 PASSWORD="Passwort"
-LOGIN_HINT="Bitte bedenke, dass das Plugin aktuell keine 2 Phasen Authentifizierung unterstützt."
 NEED_MQTT="Um dises Plugin nutzen zu können, muss das MQTT Gateway Plugin installiert sein."
-CLIENTS="UniFi WiFi Gräte"
+CLIENTS="UniFi WiFi Geräte"
 NO_CLIENTS="Geräte konnen noch nicht angezeigt werden. Bitte stelle zunächst eine Verbindung zum UniFi Controller her."
 CLIENT_SELECTION="Alle selektierten Geräte werden überwacht und an MQTT übermittelt. Alle anderen Geräte werden ignoriert. Um den Status der Geräte zu erhalten, müssen diese Selektiert werden. Es wird automatisch gespeichert."
 NAME="Name"
