--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -3,12 +3,12 @@ SAVE_BTN="Speichern"
 HINT_SAVE_SAVING="Speichere Daten ..."
 HINT_SAVE_ERROR="Fehler beim Speicher, Bitte überprüfe die Zugangsdaten"
 HINT_SAVE_OK="Erfolgreich gespeichert"
-HINT_SAVE_2FA="Bitte gebe dein 2 Faktor code ein um dich einzuloggen"
-VERSION_ERROR="Die Version deines UniFi Controller ist kleiner als 6.4.54. Bitte aktualisiere zuerst deinen controller um das Plugin nutzen zu können. Deine aktuelle Version ist"
+HINT_SAVE_2FA="Bitte gebe dein 2 Faktor Code ein um dich einzuloggen"
+VERSION_ERROR="Die Version deines UniFi Controller ist kleiner als 6.4.54. Bitte aktualisiere zuerst deinen Controller um das Plugin nutzen zu können. Deine aktuelle Version ist"
 
 [UNIFI]
 MQTT_SETTINGS="MQTT Einstellungen"
-CONTROLLER="UniFi Controller Einstelllungen"
+CONTROLLER="UniFi Controller Einstellungen"
 TOPIC="MQTT Topic"
 TOPIC_HINT="Das Mqtt Topic in dem die Werte geschrieben werden sollen. Z.B. UniFi/clients. Kein Slash am Anfang oder Ende und keine Leer- oder Sonderzeichen"
 IP="IP Adresse"
@@ -34,4 +34,4 @@ PORT_HINT="Wenn du einen port für den Zugriff auf den Controller im Browser bra
 
 
 [VALIDATION]
-TOPIC_ERROR="Bitte speizifieren das topic in dem die Daten geschrieben werden sollen."
+TOPIC_ERROR="Bitte speizifieren das Topic in dem die Daten geschrieben werden sollen."
