--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -15,7 +15,7 @@ IP="IP Adresse"
 IP_HINT="Gebe hier die IP Adresse des UniFi Controllers an. Stelle Sicher, dass Loxberry zugriff darauf hat."
 USERNAME="Benutzername"
 PASSWORD="Passwort"
-NEED_MQTT="Um dises Plugin nutzen zu können, muss das MQTT Gateway Plugin installiert sein."
+NEED_MQTT="Um dises Plugin nutzen zu können, muss das MQTT Gateway Plugin in der Version >= 2.0.4 installiert sein."
 CLIENTS="UniFi WiFi Geräte"
 NO_CLIENTS="Geräte konnen noch nicht angezeigt werden. Bitte stelle zunächst eine Verbindung zum UniFi Controller her."
 CLIENT_SELECTION="Alle selektierten Geräte werden überwacht und an MQTT übermittelt. Alle anderen Geräte werden ignoriert. Um den Status der Geräte zu erhalten, müssen diese Selektiert werden. Es wird automatisch gespeichert."
