--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -15,7 +15,7 @@ IP="IP Address"
 IP_HINT="Please enter the local IP of your UniFi controller and ensure that Loxberry has access."
 USERNAME="Username"
 PASSWORD="Password"
-NEED_MQTT="To use this plugin, the MQTT Gateway plugin is required. Please install the MQTT Gateway Plugin first."
+NEED_MQTT="To use this plugin, the MQTT Gateway plugin is required. Please install the MQTT Gateway Plugin version >= 2.0.4 first."
 CLIENTS="UniFi WiFi Clients"
 NO_CLIENTS="Clients cannot be displayed yet, please ensure a stable connection to the UniFi Controller first."
 CLIENT_SELECTION="All clients which are selected are watched and transmitted to MQTT. All other clients are ignored. To get the state of one or more elements, simply select them. The selection is saved automatically."
