Bugfixes, image for udm pro, client updates in interface, setting for wired timeout

--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -1,37 +1,5 @@
 [COMMON]
-SAVE_BTN="Speichern"
-HINT_SAVE_SAVING="Speichere Daten ..."
-HINT_SAVE_ERROR="Fehler beim Speicher, Bitte überprüfe die Zugangsdaten"
-HINT_SAVE_OK="Erfolgreich gespeichert"
-HINT_SAVE_2FA="Bitte gebe dein 2 Faktor Code ein um dich einzuloggen"
-VERSION_ERROR="Die Version deines UniFi Controller ist kleiner als 6.4.54. Bitte aktualisiere zuerst deinen Controller um das Plugin nutzen zu können. Deine aktuelle Version ist"
-
-[UNIFI]
-MQTT_SETTINGS="MQTT Einstellungen"
-CONTROLLER="UniFi Controller Einstellungen"
-TOPIC="MQTT Topic"
-TOPIC_HINT="Das Mqtt Topic in dem die Werte geschrieben werden sollen. Z.B. UniFi/clients. Kein Slash am Anfang oder Ende und keine Leer- oder Sonderzeichen"
-IP="IP Adresse"
-IP_HINT="Gebe hier die IP Adresse des UniFi Controllers an. Stelle Sicher, dass Loxberry zugriff darauf hat."
-USERNAME="Benutzername"
-PASSWORD="Passwort"
-NEED_MQTT="Um dises Plugin nutzen zu können, muss das MQTT Gateway Plugin in der Version >= 2.0.4 installiert sein."
-CLIENTS="UniFi WiFi Geräte"
-NO_CLIENTS="Geräte konnen noch nicht angezeigt werden. Bitte stelle zunächst eine Verbindung zum UniFi Controller her."
-CLIENT_SELECTION="Alle selektierten Geräte werden überwacht und an MQTT übermittelt. Alle anderen Geräte werden ignoriert. Um den Status der Geräte zu erhalten, müssen diese Selektiert werden. Es wird automatisch gespeichert."
-NAME="Name"
-MAC="Mac Adresse"
-SSID="WLAN SSID"
-EXPERIENCE="Erfahrung"
-TYPE="Typ"
-2FA="Bitte gebe dein 2 Faktor Code ein."
-ON="An"
-OFF="Aus"
-NATIVE="Benutzt du einen nativen UniFi Controller wie die Dream Machine?"
-NATIVE_HINT="Wenn du eine UniFi Dream Machine oder die Dream Machine Pro benutzt, aktiviere bitte den Schalter. Wenn dein Controller woanders läuft, dann lasse den Schalter bitte aus."
-PORT="Der port um das Dashbaord zu öffnen - sofern benötigt."
-PORT_HINT="Wenn du einen port für den Zugriff auf den Controller im Browser brauchst, dann geben diesen bitte hier an."
-
-
-[VALIDATION]
-TOPIC_ERROR="Bitte speizifieren das Topic in dem die Daten geschrieben werden sollen."
+MISSING_PLUGIN="Fehlendes Plugin"
+REQUIRE_EXPRESS_1="Dieses Plugin benötigt das"
+REQUIRE_EXPRESS_2="Plugin. Du kannst es entweder installieren oder das Plugin deinstallieren."
+EXPRESS_PLUGIN="Express Server"
