--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -1,37 +1,5 @@
 [COMMON]
-SAVE_BTN="SAVE"
-HINT_SAVE_SAVING="Saving data ..."
-HINT_SAVE_ERROR="Error While saving, please check your credentials"
-HINT_SAVE_OK="Sucessfully saved"
-HINT_SAVE_2FA="Please enter your 2FA code to login"
-VERSION_ERROR="The Version of your UniFi controller is lower than 6.4.54. Please update the controller to use the plugin. Your version is"
-
-[UNIFI]
-MQTT_SETTINGS="MQTT Settings"
-CONTROLLER="UniFi Controller Settings"
-TOPIC="MQTT Topic"
-TOPIC_HINT="Specify the topic you'd like the data to be published. eg. UniFi/clients. No slash in the beginning or the end."
-IP="IP Address"
-IP_HINT="Please enter the local IP of your UniFi controller and ensure that Loxberry has access."
-USERNAME="Username"
-PASSWORD="Password"
-NEED_MQTT="To use this plugin, the MQTT Gateway plugin is required. Please install the MQTT Gateway Plugin version >= 2.0.4 first."
-CLIENTS="UniFi WiFi Clients"
-NO_CLIENTS="Clients cannot be displayed yet, please ensure a stable connection to the UniFi Controller first."
-CLIENT_SELECTION="All clients which are selected are watched and transmitted to MQTT. All other clients are ignored. To get the state of one or more elements, simply select them. The selection is saved automatically."
-NAME="Name"
-MAC="Mac Address"
-IP="IP Address"
-SSID="SSID"
-EXPERIENCE="Experience"
-TYPE="Type"
-2FA="Please enter your 2FA code to login"
-ON="On"
-OFF="Off"
-NATIVE="Do you use a native UniFi Controller e.g. Dream Machine?"
-NATIVE_HINT="If you use a UniFi Dream Machine oder Dream MAchine Pro, please tick this with yes. If your controller runs somewhere else please leave that unchecked."
-PORT="UniFi port to acces the control panel"
-PORT_HINT="If you do need a port to access the control panel via browser, please specifiy this port here."
-
-[VALIDATION]
-TOPIC_ERROR="Please specify a topic like UniFi/clients. No spaces, no Slash in the beginning or end."
+MISSING_PLUGIN="Missing Plugin"
+REQUIRE_EXPRESS_1="This plugin reguires the"
+REQUIRE_EXPRESS_2="plugin. Either install the required plugin or uninstall this one."
+EXPRESS_PLUGIN="Express Server"
